# CoreDump

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  chess.cpp  configure.sh  console.py  gui.py  run.sh  test.py  test.sh
GUI/: ChessGame.java  gui.py
GUI/API/: API.cpp  API.py
GUI/EngineInteraction/: EngineInteraction.java  EngineInteraction_EngineInteraction.cpp  EngineInteraction_EngineInteraction.h
api/: CMakeLists.txt
api/include/: castlingType.h  color.h  console.h  global_constants.h  main.h  pieceType.h
api/include/board/: bitboard.h  position.h  threadSafePosition.h
api/include/board/magic/: magicbitboard.h  magicentry.h
api/include/engine-related/: engine.h  evaluation.h  prioritization.h  search.h
api/include/engine-related/search/: search.h  searchResult.h
api/include/extraHeuristics/: historyHeuristic.h  killerMoves.h  zobrist.h
api/include/extraHeuristics/transposition/: TTentry.h  TTflag.h  transposition.h
api/include/move/: move.h  movegen.h
api/include/move/nullMove/: nullMoveHandler.h  nullMoveState.h
api/src/: console.cpp  main.cpp
api/src/board/: magicbitboard.cpp  position.cpp
api/src/engine-related/: engine.cpp  evaluation.cpp  prioritization.cpp  search.cpp
api/src/extraHeuristics/: historyHeuristic.cpp  killerMoves.cpp  transposition.cpp  zobrist.cpp
api/src/move/: move.cpp  movegen.cpp  nullMoveHandler.cpp
chess_engine/include/: global_constants.h  perft.h
chess_engine/include/board/: bitboard.h  board.h  position.h  threadSafePosition.h
chess_engine/include/board/magic/: magicbitboard.h  magicentry.h
chess_engine/include/engine-related/: engine.h  evaluation.h  prioritization.h
chess_engine/include/engine-related/search/: search.h  searchResult.h
chess_engine/include/extraHeuristics/: historyHeuristic.h  killerMoves.h  zobrist.h
chess_engine/include/extraHeuristics/transposition/: TTentry.h  TTflag.h  transposition.h
chess_engine/include/move/: move.h  movegen.h
chess_engine/include/move/nullMove/: nullMoveHandler.h  nullMoveState.h
chess_engine/src/: main.cpp  perft.cpp
chess_engine/src/board/: board.cpp  magicbitboard.cpp  position.cpp
chess_engine/src/engine-related/: engine.cpp  evaluation.cpp  prioritization.cpp  search.cpp
chess_engine/src/extraHeuristics/: historyHeuristic.cpp  killerMoves.cpp  transposition.cpp  zobrist.cpp
chess_engine/src/move/: movegen.cpp  nullMoveHandler.cpp
